Fix navigation on mobile and desktop

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   z-index: 1;
-  height: 120px;
+  height: 50px;
 
   .home-logo {
     position: absolute;
@@ -180,12 +180,11 @@
 
   .search-section {
     position: absolute;
-    background-color: $whitesmoke;
-    margin: 20px 0 0 0;
-    right: 20%;
-    top: 20px;
+    background-color: whitesmoke;
+    right: 25%;
     z-index: 10;
-    bottom: 30%;
+    transform: translateY(-50%);
+    top: 50%;
   }
 
   .burger {
@@ -233,11 +232,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: $white;
-    height: 20px;
+    background: #fff;
+    height: 21px;
     border-radius: 40px;
     padding: 10px;
-    border: 2px solid $black;
+    border: 2px solid black;
+    width: 200px;
 
     .search-text {
       border: none;
@@ -277,11 +277,9 @@
   .categories {
     display: inline-flex;
     position: absolute;
-    left: 0;
-    background-color: $whitesmoke;
-    width: 80%;
-    bottom: 0;
-    margin: 0 0 10px 20px;
+    left: 100px;
+    background-color: whitesmoke;
+    transform: translateY(50%);
 
     a {
       text-decoration: none;
@@ -305,6 +303,7 @@
 
 @media only screen and (max-width: 1000px) {
   header {
+    height: 100px !important;
     .categories {
       display: none !important;
     }
@@ -316,6 +315,14 @@
     .burger {
       height: 100px;
       width: 100px !important;
+    }
+
+    .search-box {
+      width: 300px !important;
+      height: 30px !important;
+      input {
+        font-size: 25px !important;
+      }
     }
 
     .search-section {
